# Voxel-Cave

./: Build.bat  CMakeLists.txt
Content/: Config.json  Log.txt  imgui.ini
Content/Assets/Shaders/: DebugPS.hlsl  DebugVS.hlsl  test.hlsl  testps.hlsl
MagicCaves/: MagicCaves.vcxproj  MagicCaves.vcxproj.filters
MagicCaves/Engine/PrecompiledHeader/: pch.h
MagicCaves/Engine/Renderer/RenderPasses/: RenderPass_Chunks.cpp
MagicCaves/Engine/World/Chunks/: Chunk.cpp  Chunk.h
MagicCaves/Engine/World/Voxel/: Block.cpp  Block.h  VoxelShape.cpp  VoxelShape.h
MagicCaves/Game/: GameClient.cpp  GameClient.h
MagicCaves/Game/Registry/: Registry.cpp  Registry.h
src/: Launch.cpp  rename.py
src/Core/: CoreTypes.cpp  CoreTypes.h  Thread.cpp  Thread.h  Utils.h
src/Engine/: Config.cpp  Config.h  Engine.cpp  Engine.h
src/Input/: InputSystem.cpp  InputSystem.h
src/Physics/: AABB.h
src/Rendering/: BindingTable.cpp  BindingTable.h  BindingTableAllocator.cpp  BindingTableAllocator.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ChunkRenderer.cpp  ChunkRenderer.h  ConstantBuffer.cpp  ConstantBuffer.h  GraphicsCommandList.cpp  GraphicsCommandList.h  IndexBuffer.cpp  IndexBuffer.h  PSO.cpp  PSO.h  Renderer.cpp  Renderer.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
src/Resources/: RenderResource.cpp  RenderResource.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
src/World/: Chunk.cpp  Chunk.h  World.cpp  World.h
